build(pom): Bump modernizer-maven-plugin from 2.7.0 to 3.5.0
Update lots of code to comply.

Refs: 732